[tool.poetry]
name = "opendbc"
version = "1.0.0"
description = "CAN bus databases and tools"
license = "MIT"
authors = ["Vehicle Researcher <user@comma.ai>"]
readme = "README.md"
repository = "https://github.com/commaai/opendbc"

[tool.cython-lint]
max-line-length = 120
ignore = ["E111", "E114"]

# https://beta.ruff.rs/docs/configuration/#using-pyprojecttoml
[tool.ruff]
select = ["E", "F", "W", "PIE", "C4", "ISC", "RUF100", "A"]
ignore = ["W292", "E741", "E402", "C408", "ISC003"]
line-length = 160
target-version="py311"
flake8-implicit-str-concat.allow-multiline=false
